[package]
name = "minisat"
version = "0.4.4"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
build = "build.rs"
description = "MiniSat Rust interface. Solves a boolean satisfiability problem given in conjunctive normal form."
readme = "README.md"
documentation = "https://docs.rs/minisat"
repository = "https://github.com/luteberget/minisat-rs/"
categories = ["api-bindings","science"]
license = "MIT"
edition = "2018"
links = "minisat"

[dependencies]
itertools = "0.8"

[dev-dependencies]
quickcheck = "0.7"
sudoku = "0.7"

[build-dependencies]
cc = "1.0.52"
bindgen = "0.53.2"

[features]
glucose = []
